<resources>
    <string name="app_name">TailSync</string>
    <string name="tile_label">TailSync</string>
    
    <!-- App Shortcuts -->
    <string name="shortcut_sync_short">Sync Now</string>
    <string name="shortcut_sync_long">Push Clipboard to Server</string>
    <string name="shortcut_settings_short">Settings</string>
    <string name="shortcut_settings_long">Open TailSync Settings</string>
    <string name="shortcut_connect_short">Connect</string>
    <string name="shortcut_connect_long">Connect to Server</string>
    
    <!-- Widget -->
    <string name="widget_name">TailSync Quick Sync</string>
</resources>
